--- a/css/estylo.css
+++ b/css/estylo.css
@@ -6,7 +6,8 @@
 /* Elementos HTML */
 
 html {
-  font-size: 62.5%; /* Reset para REMS - 62.5% = 10px de 16px */
+  font-size: 62.5%;
+  /* Reset para REMS - 62.5% = 10px de 16px */
 }
 
 body {
@@ -19,7 +20,10 @@ img {
   max-width: 100%;
 }
 
-h1, h2, h3, h4 {    
+h1,
+h2,
+h3,
+h4 {
   font-family: 'PT Sans', sans-serif;
 }
 
@@ -44,22 +48,22 @@ h1, h2, h3, h4 {
   margin: 0 auto;
 }
 
-.no-margin  {
+.no-margin {
   margin: 0;
 }
 
 .vermas {
   text-transform: uppercase;
-  color:#486e7d;
+  color: #486e7d;
   font-size: 1.3rem;
   text-align: right;
-  display:block;
+  display: block;
   font-weight: 700;
 }
 
 .vermas:hover {
   text-decoration: none;
-  color:#486e7d;
+  color: #486e7d;
   opacity: .5;
 
 }
@@ -68,23 +72,23 @@ h1, h2, h3, h4 {
 
 /* Header */
 #cabecera {
--webkit-box-shadow: 0 0 2rem 0.1rem rgba(0,0,0,0.75);
--moz-box-shadow: 0 0 2rem 0.1rem rgba(0,0,0,0.75);
-box-shadow: 0 0 2rem 0.1rem rgba(0,0,0,0.75);
-position:  relative;
-z-index: 2;
+  -webkit-box-shadow: 0 0 2rem 0.1rem rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0 0 2rem 0.1rem rgba(0, 0, 0, 0.75);
+  box-shadow: 0 0 2rem 0.1rem rgba(0, 0, 0, 0.75);
+  position: relative;
+  z-index: 2;
 }
 
 .botonera-header {
-  background-color:#5e8392;
-  font-size:1rem;
-  border-bottom: 0.1rem solid #dcd6d6; 
+  background-color: #5e8392;
+  font-size: 1rem;
+  border-bottom: 0.1rem solid #dcd6d6;
 }
 
 @media (min-width:768px) {
   .botonera-header {
     font-size: 1.3rem;
-  }  
+  }
 }
 
 .contenido-botonera-header {
@@ -95,22 +99,22 @@ z-index: 2;
 
 .contenido-botonera-header p {
   margin-right: 2rem;
-  color:white;
+  color: white;
   font-size: .9rem;
 }
 
 @media (min-width:768px) {
   .contenido-botonera-header p {
-    font-size:1.3rem;
+    font-size: 1.3rem;
   }
 }
 
 .contenido-botonera-header a {
   display: inline-block;
   padding: 0.5rem 1.3rem;
-  color:#ccc;
-  background:#486e7d;
-  }
+  color: #ccc;
+  background: #486e7d;
+}
 
 .contenido-botonera-header a:hover {
   color: #000;
@@ -122,9 +126,9 @@ z-index: 2;
   margin-right: 0.8rem;
 }
 
-.btnPrinMargenLeft{
-    color: #fff;
-    margin-right: 0.8rem;
+.btnPrinMargenLeft {
+  color: #fff;
+  margin-right: 0.8rem;
 }
 
 .contenedor-brand {
@@ -133,64 +137,64 @@ z-index: 2;
 
 
 #menuPrincipal a {
-    display: inline-block;
-    font-size: 1.3rem;
-    color: black;
+  display: inline-block;
+  font-size: 1.3rem;
+  color: black;
 }
 
 @media (min-width:768px) {
-  #menuPrincipal a {  
-    font-size: .9rem;  
-}
+  #menuPrincipal a {
+    font-size: .9rem;
+  }
 
-@media (min-width:857px) {
-  #menuPrincipal a {  
-    font-size: 1.1rem;  
-}
-}
+  @media (min-width:857px) {
+    #menuPrincipal a {
+      font-size: 1.1rem;
+    }
+  }
 
 }
 
 @media (min-width:946px) {
-  #menuPrincipal a {  
-    font-size: 1.3rem;  
-}
-  
+  #menuPrincipal a {
+    font-size: 1.3rem;
+  }
+
 }
 
 #menuPrincipal a:hover {
-    text-decoration: none;
-    color: #89bdd3;
+  text-decoration: none;
+  color: #89bdd3;
 }
 
 /* Slider --- Usando Swiper */
 
-  .swiper-container {
-      width: 100%;
-      height: 100%;
-      position: relative;
-      z-index: 1;
-    }
+.swiper-container {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  z-index: 1;
+}
 
-  .swiper-slide {
-    text-align: center;
-    font-size: 1.8rem;
-    background: #fff;
+.swiper-slide {
+  text-align: center;
+  font-size: 1.8rem;
+  background: #fff;
 
-    /* Center slide text vertically */
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-justify-content: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    align-items: center;
-  }
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
 
 
 /* Destacados */
@@ -203,19 +207,19 @@ z-index: 2;
   font-size: 2.2rem;
   font-weight: 700;
   padding-bottom: 1rem;
-  color:#486e7d;
+  color: #486e7d;
   margin-top: 1.5rem;
 }
 
 .articulos-destaca {
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap;  
+  flex-wrap: wrap;
   margin-bottom: 8rem;
 }
 
 .articulo-desta {
-  border:1px solid #b5b5b5;
+  border: 1px solid #b5b5b5;
   background-color: #f5f5f5;
   margin-bottom: 1rem;
   transition: all .3s ease;
@@ -223,20 +227,20 @@ z-index: 2;
 
 .articulo-desta:hover {
   transform: scale(1.05);
-  border:1px solid #486e7d;
+  border: 1px solid #486e7d;
   box-shadow: 0 0 5rem #666;
 }
 
 @media (min-width: 486px) {
   .articulo-desta {
     flex: 0 0 calc(50% - 1rem);
-  }   
+  }
 }
 
 @media (min-width: 992px) {
   .articulo-desta {
     flex: 0 0 calc(25% - 1rem);
-  }   
+  }
 }
 
 .img-destaca:hover {
@@ -254,7 +258,7 @@ z-index: 2;
 }
 
 .contenido-desta a {
-  color:#486e7d;
+  color: #486e7d;
 }
 
 .contenido-desta a:hover {
@@ -273,8 +277,9 @@ z-index: 2;
   line-height: 1.8;
   font-size: 1.4rem;
   text-align: justify;
- 
-  -webkit-line-clamp: 3; /*Cantidad de líneas que desea mostrar*/
+
+  -webkit-line-clamp: 3;
+  /*Cantidad de líneas que desea mostrar*/
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -287,7 +292,7 @@ z-index: 2;
   .contenido-desta p {
     height: 15rem;
   }
-  
+
 }
 
 
@@ -303,9 +308,9 @@ z-index: 2;
 @media (min-width:992px) {
   .footer-prin {
     flex-direction: row;
-    justify-content: space-between;    
+    justify-content: space-between;
   }
-  
+
 }
 
 
@@ -316,9 +321,9 @@ z-index: 2;
 
 
 #contenedor-logo-pie strong {
-    color:#303030;
-    display: inline-block;
-    font-size: 1.4rem;
+  color: #303030;
+  display: inline-block;
+  font-size: 1.4rem;
 }
 
 #contenedor-logo-pie img {
@@ -331,22 +336,22 @@ z-index: 2;
 }
 
 .direcciones-footer {
-    margin-right: 0.8rem;
-    font-size: 1.2rem;
-    color: #333333;
+  margin-right: 0.8rem;
+  font-size: 1.2rem;
+  color: #333333;
 }
 
 .direcciones-footer i {
-    margin-right: 0.5rem;
+  margin-right: 0.5rem;
 }
 
-#contenedor-footer-cen {  
+#contenedor-footer-cen {
   border-left: solid 0.1rem #486e7d;
   border-right: solid 0.1rem #486e7d;
 }
 
 #contenedor-footer-cen a {
-    color:#303030;
+  color: #303030;
 }
 
 #contenedor-footer-cen a:hover {
@@ -365,14 +370,14 @@ z-index: 2;
 }
 
 #contenedor-footer-der p {
-    font-size: 1.2rem;
+  font-size: 1.2rem;
 }
 
 
 .site-footer {
-    padding-top: 2rem;
-    background: #5e8392;
-  
+  padding-top: 2rem;
+  background: #5e8392;
+
 }
 
 
@@ -386,7 +391,7 @@ z-index: 2;
 }
 
 .final-footer {
-  background-color:#486e7d;
+  background-color: #486e7d;
 }
 
 .final-footer p {
@@ -395,7 +400,7 @@ z-index: 2;
 }
 
 .final-footer a {
-  color:#B2BABB;
+  color: #B2BABB;
 }
 
 .menu-pie {
@@ -420,14 +425,15 @@ z-index: 2;
 
 .menu-pie li a {
   color: #333333;
-  text-decoration:none;  
+  text-decoration: none;
 }
 
 .menu-pie li a:hover {
   opacity: 0.5;
 }
 
-#privacidad-modal p, #terminos-modal p {
+#privacidad-modal p,
+#terminos-modal p {
   text-align: justify;
 }
 
@@ -448,64 +454,64 @@ z-index: 2;
 
   height: 20.5rem;
   background-image: url("../images/institucional.jpg");
-  background-position:center bottom;
+  background-position: center bottom;
   background-size: cover;
 }
+
 .contenedor-subpaginas {
   margin-top:1rem;
-  display: flex;
-  flex-direction: column;  
+  display: grid;
+  grid-template-columns: 100%;
+  grid-column-gap: 1rem;
 }
 
 @media (min-width:768px) {
-  .contenedor-subpaginas {    
-    flex-direction: row;
-    justify-content: space-between;  
+  .contenedor-subpaginas {
+    display: grid;
+    grid-template-columns: 25% 75%;
+    grid-column-gap: 1rem;
   }
 }
 
-@media (min-width:768px) {
-  .menu-subpaginas {
-    display: block;
-    flex: 0 0 calc(25% - 1rem);
-  }  
-}
-
-.contenido-subpaginas {
-  flex:100%;
-}
-
-@media (min-width:768px) {
-  .contenido-subpaginas {
-    margin-top: 2rem;
-    flex: 0 0 calc(75% - 1rem);
-  }  
-}
-
-.submenu-institucional, .submenu-nuestros {
+.submenu-institucional,
+.submenu-nuestros {
   font-size: 1.5rem;
+}
+
+.submenu-nuestros {
+  padding: .5rem 1rem;
+}
+
+.submenu-nuestros a {
+  text-decoration: none;
+  color: #495057;
+  font-size: 1.5rem;
+  display: block;
+  padding: .75rem 1.25rem;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.125);
 }
 
 .encabezado-subpaginas-nuestros {
   height: 20.5rem;
   background-image: url("../images/nuestros.jpg");
-  background-position:center bottom;
+  background-position: center bottom;
   background-size: cover;
 }
 
-.subsite-header h1, .encabezado-subpaginas-nuestros h1  {
+.subsite-header h1,
+.encabezado-subpaginas-nuestros h1 {
   opacity: 0.7;
   font-size: 3rem;
   background-color: #fff;
   display: inline-block;
-  padding-left:1rem; 
-  padding-right:3rem;
-  font-weight: 700; 
+  padding-left: 1rem;
+  padding-right: 3rem;
+  font-weight: 700;
 }
 
 @media (min-width:486px) {
-  .subsite-header h1  {
-    padding-right:12rem;
+  .subsite-header h1 {
+    padding-right: 12rem;
   }
 }
 
@@ -522,11 +528,13 @@ z-index: 2;
 .boton-submenu {
   margin-bottom: 0.5rem;
 }
+
 @media (min-width:768px) {
   .boton-submenu {
     display: none;
   }
 }
+
 .submenu-mobile {
   display: flex;
   justify-content: space-between;
@@ -546,7 +554,7 @@ z-index: 2;
 
 .contenido-subpaginas h2::after {
   content: "";
-  display:block;
+  display: block;
   width: 8rem;
   height: .5rem;
   background-color: #486e7d;
@@ -554,9 +562,9 @@ z-index: 2;
 }
 
 .contenido-subpaginas h3 {
-   margin-bottom: 3rem;
-   color: #486e7d;
-   font-size: 2.2rem;
+  margin-bottom: 3rem;
+  color: #486e7d;
+  font-size: 2.2rem;
 }
 
 .contenido-subpaginas h3 span {
@@ -605,26 +613,26 @@ z-index: 2;
 #valores ul {
   display: flex;
   flex-direction: column;
-  list-style: none; 
+  list-style: none;
   align-items: start;
 }
 
 #valores ul li {
   text-align: center;
-  min-width:100%;
+  min-width: 100%;
   color: white;
   font-weight: 700;
   font-size: 1.8rem;
-  padding:1rem 0;  
+  padding: 1rem 0;
   border-radius: .5rem;
   margin-bottom: 1.5rem;
 }
 
 @media (min-width:486px) {
   #valores ul li {
-      min-width: 30rem;
-  }  
-  
+    min-width: 30rem;
+  }
+
 }
 
 .contenedor-consejo,
@@ -657,8 +665,8 @@ z-index: 2;
 #guardia p,
 #uti p,
 #enfermeria p {
- text-align: justify;
- font-size: 1.6rem;
+  text-align: justify;
+  font-size: 1.6rem;
 }
 
 .texto-servicios {
@@ -688,7 +696,8 @@ z-index: 2;
   text-decoration: none;
 }
 
-.acordeones button:hover, .acordeones button:focus {
+.acordeones button:hover,
+.acordeones button:focus {
   text-decoration: none;
 }
 
@@ -701,7 +710,7 @@ z-index: 2;
 
 }
 
-.medicos-especialidad p  span {
+.medicos-especialidad p span {
   font-weight: 700;
 
 }
