--- a/css/estylo.css
+++ b/css/estylo.css
@@ -27,6 +27,10 @@ h4 {
   font-family: 'PT Sans', sans-serif;
 }
 
+a:link, a:visited, a:active {
+  text-decoration:none;
+}
+
 .texto-general {
   font-size: 1.6px;
 }
@@ -78,6 +82,20 @@ h4 {
   font-weight: bold;
 }
 
+.inactivo {
+  color:rgb(209, 202, 202) !important;
+}
+
+.inactivo:hover{
+  color:rgb(209, 202, 202) !important;
+  border-bottom: none !important;
+  cursor: default;
+}
+
+.enlaceInterno {
+  margin-left: .8rem;
+  font-size: 1.5rem;
+}
 
 /**** INDEX ****/
 
@@ -642,8 +660,10 @@ div.contactos-consultorios {
 
 .contenido-subpaginas h3 {
   margin-bottom: 3rem;
+  padding-bottom: .8rem;
   color: #486e7d;
   font-size: 2.2rem;
+  border-bottom: 2px solid #486e7d;
 }
 
 .contenido-subpaginas h3 span {
